# kvasir

./: .gitignore  CHANGELOG.md  README.md  kvasir.cabal
public/: kvasir.css
src/: Database.hs  Main.hs  Types.hs  Utils.hs
src/Controllers/: Authentication.hs  Controllers.hs  Pages.hs  Root.hs
src/Database/: Account.hs  Page.hs  Types.hs
src/Handlers/: Authentication.hs  Handlers.hs
src/Html/: Attributes.hs  Html.hs
src/Pages/: Authentication.hs  Layout.hs
src/Views/: Authentication.hs  Components.hs  Layout.hs  Pages.hs  Root.hs
style/: colors.scss  main.scss  mixins.scss  variables.scss
