cabal-version:      2.4
name:               kvasir
version:            0.1.0.0
author:             Martin Strömberg
maintainer:         contact@martinstromberg.se
synopsis:           Note-taking web app
description:        Note-taking web app
extra-source-files: CHANGELOG.md
homepage:           https://github.com/martinstromberg/kvasir
bug-reports:        https://github.com/martinstromberg/kvasir/issues
license:            MIT
category:           Web, Applications

executable kvasir
    main-is:                Main.hs
    default-language:       Haskell2010
    hs-source-dirs:         src
    other-modules:          Database

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:          base ^>=4.17.2.0,
                            warp >= 3.3.29,
                            twain ^>= 2.1,
                            beam-core >= 0.10,
                            beam-sqlite >= 0.5.3,
                            text >=1.0  && <2.1,
                            sqlite-simple >= 0.4.18,
                            uuid >= 1.3.15
