cabal-version:      2.4
name:               kvasir
version:            0.1.0.0
author:             Martin Strömberg
maintainer:         contact@martinstromberg.se
synopsis:           Note-taking web app
description:        Note-taking web app
extra-source-files: CHANGELOG.md
homepage:           https://github.com/martinstromberg/kvasir
bug-reports:        https://github.com/martinstromberg/kvasir/issues
license:            MIT
category:           Web, Applications

executable kvasir
    main-is:                Main.hs
    default-language:       Haskell2010
    hs-source-dirs:         src
                          , src/Controllers
                          , src/Html
                          , src/Views

    other-modules:          Database
                          , Database.Account
                          , Database.Page
                          , Controllers
                          , Controllers.Authentication
                          , Controllers.Root
                          , Html
                          , Html.Attributes
                          , Html.Types
                          , Views.Authentication
                          , Views.Components
                          , Views.Layout
                          , Views.Root

    build-depends:          base ^>=4.17.2.0
                          , warp >= 3.3.29
                          , twain ^>= 2.1
                          , beam-core >= 0.10
                          , beam-sqlite >= 0.5.3
                          , text >=1.0  && <2.1
                          , bytestring >= 0.10.4
                          , utf8-string >= 0.9
                          , sqlite-simple >= 0.4.18
                          , uuid >= 1.3.15
                          , wai-extra >=3.0 && <3.2
                          , wai-app-static >= 3.1 && < 3.2
                          , http-types ^>= 0.12.3

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
